<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_local_airport_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@mipmap/ic_launcher_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_destination"
        android:icon="@drawable/ic_destination"
        android:title="@string/title_destination" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />
</menu>